--- a/pillar-web/src/styles/main.sass
+++ b/pillar-web/src/styles/main.sass
@@ -75,7 +75,9 @@ $navbar-backdrop-height: 600px
 .container-page
 	background-color: $color-background
 
-	&.dashboard
+	&.dashboard,
+	&.training,
+	&.open-projects
 		background-color: $color-background-nav
 
 .page-content
@@ -525,7 +527,7 @@ header.navbar-header
 	background: linear-gradient(to bottom, rgba($color-background, 0) 25%, rgba($color-background,0.5) 50%, rgba($color-background,1) 100%)
 
 	&.collection
-		background: linear-gradient(to bottom, rgba($color-background, 0) 25%, rgba($color-background-nav,0.5) 50%, rgba($color-background-nav,1) 100%)
+		background: linear-gradient(to bottom, rgba($color-background, 0) 25%, rgba($color-background-nav,0.5) 50%, rgba($color-background-nav,1) 90%)
 
 /* Global, we want all menus to look like this */
 ul.dropdown-menu
